test/fail/api/string/string_to_i_empty.lly
#[
ValueError: Invalid base 10 literal ''.
Traceback:
    from [C]: in string::to_i
    from string_to_i_empty.lly:8: in __main__
]#

"".to_i()
